--- a/index.html
+++ b/index.html
@@ -103,12 +103,15 @@
         <h3>CATEGORIAS</h3>
         <div class="categoria__container">
             <a href="#" class="categoria__amarelo">
+                <img src="./img/Group 4.svg">
                 <h4>CERVEJA</h4>
             </a>
             <a href="#" class="categoria__preto">
+                <img src="./img/Vector.svg">
                 <h4>ACESSÓRIOS</h4>
             </a>
             <a href="#" class="categoria__vermelho">
+                <img src="./img/Vector_.svg">
                 <h4>KITS</h4>
             </a>
         </div>
