banner pesquisa - Home

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="./css/categoria.css" rel="stylesheet" />
     <link href="./css/produtos.css" rel="stylesheet" />
     <link href="./css/footer.css" rel="stylesheet" />
+    <link href="./css/busca.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -43,6 +44,12 @@
             </ul>
         </nav>
     </header>
+
+    <section class="pesquisa">
+        <div class="pesquisa__container">
+            <input class="pesquisa__input" type="search" placeholder="Buscar no site">
+        </div>
+    </section>
 
     <section class="carrossel">
         <!-- Slider main container -->
