--- a/home-loja.html
+++ b/home-loja.html
@@ -170,7 +170,7 @@
 			<h3>TODOS OS PRODUTOS</h3>
 			<ul class="produtos__container">
 				<li class="produto__container">
-					<a href="#" class="link__produto">
+					<a href="./produto.html" class="link__produto">
 						<div class="produto__img">
 							<img
 								class="foto"
