--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>Goró</title>
 		<link rel="stylesheet" href="./style.css" />
 		<link rel="stylesheet" href="./css/header.css" />
+		<link rel="stylesheet" href="./css/banner.css" />
 		<link rel="stylesheet" href="./css/info.css" />
 		<link rel="stylesheet" href="./css/about.css" />
 		<link rel="stylesheet" href="./css/footer.css" />
@@ -64,7 +65,7 @@
 					src="./img/goro-cerveja.png"
 					id="img-banner"
 				/>
-				<div class="carousel-text">
+				<div class="carousel-text conteudo">
 					<h6>CATEGORIA</h6>
 					<h1>LOREM IPSUM</h1>
 					<p>
