pagina de produto quase finalizada

--- a/produto.html
+++ b/produto.html
@@ -16,6 +16,7 @@
 		<link href="./css/footer.css" rel="stylesheet" />
 		<link href="./css/busca.css" rel="stylesheet" />
 		<link href="./css/pagina-produto.css" rel="stylesheet" />
+		<link href="./css/produtos.css" rel="stylesheet" />
 		<link rel="stylesheet" href="./style.css" />
 		<script
 			src="https://kit.fontawesome.com/8efdacdf0c.js"
@@ -126,7 +127,7 @@
 						<i class="fa-solid fa-star" id="rating-4"></i>
 						<i class="fa-solid fa-star" id="rating-5"></i>
 					</div>
-					<h3 id="valorTotal">R$ 10,00</h3>
+					<h3 id="valorTotal">R$ 00,00</h3>
 					<section id="compra">
 						<div
 							class="btn-quantidade"
@@ -152,6 +153,270 @@
 					</section>
 				</section>
 			</div>
+
+			<!-- *****COMENTARIOS***** -->
+
+			<section id="comentarios">
+				<h2 class="subtitulo">COMENTÁRIOS</h2>
+				<hr class="divisao" />
+				<section class="comentario">
+					<h3>Nome Sobrenome</h3>
+					<div class="rating-user">
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-solid fa-star"></i>
+					</div>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						Donec laoreet fermentum mollis. In nisi tellus,
+						tristique eget nisl at, tristique posuere turpis.
+						Quisque eleifend velit quis vestibulum sodales. Donec
+						porta metus non malesuada aliquet.
+					</p>
+					<div class="rating-comentario">
+						<img alt="thumbs up" src="./img/like-active.png" />
+						<div class="likes">1</div>
+						<img alt="thumbs down" src="./img/dislike.png" />
+						<div class="dislikes"></div>
+					</div>
+					<h3>Nome Sobrenome</h3>
+					<div class="rating-user">
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-solid fa-star"></i>
+					</div>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+					</p>
+					<div class="rating-comentario">
+						<img alt="thumbs up" src="./img/like.png" />
+						<div class="likes"></div>
+						<img alt="thumbs down" src="./img/dislike-active.png" />
+						<div class="dislikes">1</div>
+					</div>
+					<h3>Nome Sobrenome</h3>
+					<div class="rating-user">
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-solid fa-star"></i>
+						<i class="fa-solid fa-star"></i>
+					</div>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+					</p>
+					<div class="rating-comentario">
+						<img alt="thumbs up" src="./img/like.png" />
+						<div class="likes"></div>
+						<img alt="thumbs down" src="./img/dislike.png" />
+						<div class="dislikes"></div>
+					</div>
+				</section>
+			</section>
+			<section id="recomendacao">
+				<h2 class="subtitulo">QUEM VIU ESSE PRODUTO TAMBÉM VIU</h2>
+				<hr class="divisao" />
+
+				<ul class="produtos__container">
+					<li class="produto__container">
+						<a href="./produto.html" class="link__produto">
+							<div class="produto__img">
+								<img
+									class="foto"
+									src="./img/PRODUTOSKIT 1.png"
+									alt="banner"
+								/>
+								<div class="icone">
+									<a href="#"
+										><img
+											class="icone"
+											src="./img/sacola.png"
+											alt="banner"
+									/></a>
+								</div>
+							</div>
+							<div class="produto__conteudo">
+								<p class="produto__nome">
+									Kit Goró - 3 cervejas
+								</p>
+								<p class="produto__descricao">kits</p>
+								<p class="produto__valor">R$ 00,00</p>
+							</div>
+						</a>
+					</li>
+					<li class="produto__container">
+						<a href="./produto.html" class="link__produto">
+							<div class="produto__img">
+								<img
+									class="foto"
+									src="./img/PRODUTOSKIT 1.png"
+									alt="banner"
+								/>
+								<div class="icone">
+									<a href="#"
+										><img
+											class="icone"
+											src="./img/sacola.png"
+											alt="banner"
+									/></a>
+								</div>
+							</div>
+							<div class="produto__conteudo">
+								<p class="produto__nome">
+									Kit Goró - 3 cervejas
+								</p>
+								<p class="produto__descricao">kits</p>
+								<p class="produto__valor">R$ 00,00</p>
+							</div>
+						</a>
+					</li>
+					<li class="produto__container">
+						<a href="./produto.html" class="link__produto">
+							<div class="produto__img">
+								<img
+									class="foto"
+									src="./img/PRODUTOSKIT 1.png"
+									alt="banner"
+								/>
+								<div class="icone">
+									<a href="#"
+										><img
+											class="icone"
+											src="./img/sacola.png"
+											alt="banner"
+									/></a>
+								</div>
+							</div>
+							<div class="produto__conteudo">
+								<p class="produto__nome">
+									Kit Goró - 3 cervejas
+								</p>
+								<p class="produto__descricao">kits</p>
+								<p class="produto__valor">R$ 00,00</p>
+							</div>
+						</a>
+					</li>
+					<li class="produto__container">
+						<a href="./produto.html" class="link__produto">
+							<div class="produto__img">
+								<img
+									class="foto"
+									src="./img/PRODUTOSKIT 1.png"
+									alt="banner"
+								/>
+								<div class="icone">
+									<a href="#"
+										><img
+											class="icone"
+											src="./img/sacola.png"
+											alt="banner"
+									/></a>
+								</div>
+							</div>
+							<div class="produto__conteudo">
+								<p class="produto__nome">
+									Kit Goró - 3 cervejas
+								</p>
+								<p class="produto__descricao">kits</p>
+								<p class="produto__valor">R$ 00,00</p>
+							</div>
+						</a>
+					</li>
+				</ul>
+			</section>
 		</main>
+		<footer>
+			<hr class="amarelo" />
+			<hr class="vermelho" />
+			<hr class="preto" />
+			<div class="footer__container">
+				<div class="footer__logo">
+					<img class="logo" alt="Logo Goró" src="./img/logo.png" />
+				</div>
+
+				<div class="footer__inst">
+					<ul>
+						<h5>INSTITUCIONAL</h5>
+						<li>
+							<a href="#"> Home </a>
+						</li>
+						<li>
+							<a href="#"> Portfólio </a>
+						</li>
+						<li>
+							<a href="#"> Contato </a>
+						</li>
+						<li>
+							<a href="#"> Sobre nós </a>
+						</li>
+						<li>
+							<a href="#"> loja </a>
+						</li>
+					</ul>
+				</div>
+
+				<div class="footer__legal">
+					<ul>
+						<h5>LEGAL</h5>
+						<li>
+							<a href="#"> Termos de uso </a>
+						</li>
+						<li>
+							<a href="#"> Política de privacidade </a>
+						</li>
+					</ul>
+
+					<div class="footer__redes">
+						<ul class="footer__lista">
+							<h5>REDES SOCIAIS</h5>
+							<li class="footer__item">
+								<a class="footer__link" href="#"
+									><img
+										class="redes__logo"
+										alt="Instagram"
+										src="./img/Instagram.png"
+								/></a>
+							</li>
+							<li class="footer__item">
+								<a class="footer__link" href="#"
+									><img
+										class="redes__logo"
+										alt="YouTube"
+										src="./img/YouTube.png"
+								/></a>
+							</li>
+							<li class="footer__item">
+								<a class="footer__link" href="#"
+									><img
+										class="redes__logo"
+										alt="Facebook"
+										src="./img/Facebook.png"
+								/></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="footer__busca">
+					<p>
+						Inscreva-se na nossa Newsletter e receba as nossas
+						novidades em primeira mão.
+					</p>
+					<div class="busca__input">
+						<input type="text" placeholder="SEU E-MAIL" />
+						<button>INSCREVER-SE</button>
+					</div>
+				</div>
+			</div>
+
+			<p>
+				© 2022 CERVEJARIA GORÓ LTDA. 00.000.000/0001-00 | Rua dos Bobos,
+				0 - Cidade, ES
+			</p>
+		</footer>
 	</body>
 </html>
