--- a/home-loja.html
+++ b/home-loja.html
@@ -50,28 +50,20 @@
 			<nav class="redes">
 				<ul class="menu__lista">
 					<li class="menu__item">
-						<a class="menu__link" href="#"
+						<a class="menu__link" href="./Login.html"
 							><img
 								class="redes__logo"
-								alt="Instagram"
-								src="./img/Instagram.png"
-						/></a>
+								alt="Login"
+								src="./img/login.svg"
+						/> LOGIN </a>
 					</li>
 					<li class="menu__item">
 						<a class="menu__link" href="#"
 							><img
 								class="redes__logo"
-								alt="YouTube"
-								src="./img/YouTube.png"
-						/></a>
-					</li>
-					<li class="menu__item">
-						<a class="menu__link" href="#"
-							><img
-								class="redes__logo"
-								alt="Facebook"
-								src="./img/Facebook.png"
-						/></a>
+								alt="Carrinho"
+								src="./img/carrinho.svg"
+						/> CARRINHO </a>
 					</li>
 				</ul>
 			</nav>
