Ecomerce parte respolciva, sem o JS

--- a/home-loja.html
+++ b/home-loja.html
@@ -26,14 +26,15 @@
 
 	<body>
 		<header class="cabecalho">
-			<nav class="menu">
-				<a class="menu__link" href="./index.html"
+			<a class="menu__link" href="./index.html"
 					><img
 						class="logo"
 						alt="Logo Goró"
 						src="./img/logo goro 1.png"
 					/>
-				</a>
+			</a>
+			<div class="menu">
+				
 				<ul class="menu__lista">
 					<li class="menu__item">
 						<a class="menu__linka" href="#">CERVEJAS</a>
@@ -45,28 +46,38 @@
 						<a class="menu__linka" href="#">KITS</a>
 					</li>
 				</ul>
-			</nav>
+			</div>
 
-			<nav class="redes">
-				<ul class="menu__lista">
-					<li class="menu__item">
-						<a class="menu__link" href="./Login.html"
-							><img
-								class="redes__logo"
-								alt="Login"
-								src="./img/login.svg"
-						/> LOGIN </a>
-					</li>
-					<li class="menu__item">
-						<a class="menu__link" href="#"
-							><img
-								class="redes__logo"
-								alt="Carrinho"
-								src="./img/carrinho.svg"
-						/> CARRINHO </a>
-					</li>
-				</ul>
-			</nav>
+			<div class="redes">
+
+				<div class="nav_menu">
+					<ul class="menu__lista">
+						<li class="menu__item">
+							<a class="menu__link" href="./Login.html"
+								><img
+									class="redes__logo"
+									alt="Login"
+									src="./img/login.svg"
+							/> LOGIN </a>
+						</li>
+						<li class="menu__item">
+							<a class="menu__link" href="#"
+								><img
+									class="redes__logo"
+									alt="Carrinho"
+									src="./img/carrinho.svg"
+							/> CARRINHO </a>
+						</li>
+					</ul>
+				</div>
+
+				<div class="menu-bar">
+					<span class="bar"></span>
+					<span class="bar"></span>
+					<span class="bar"></span>
+				</div>
+				
+			</div>
 		</header>
 
 		<section class="pesquisa">
@@ -93,8 +104,8 @@
 							<p class="conteudo-um">ACESSÓRIOS</p>
 							<h2>GORÓ STYLE</h2>
 							<p class="conteudo-dois">
-								Chique e confortável! Garanta a camiseta que
-								<br />combina com a sua cerveja favorita.
+								Chique e confortável! <br>Garanta a camiseta que
+								<br />combina com a sua cerveja <br> favorita.
 							</p>
 							<a href="#">VER CAMISETAS</a>
 						</div>
@@ -425,7 +436,7 @@
 
 		<footer>
 			<div class="footer__container">
-				<div class="footer__logo">
+				<div class=".footer__logo">
 					<img
 						class="logo"
 						alt="Logo Goró"
