feito tela produto

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Goró</title>
 		<link rel="stylesheet" href="./style.css" />
-		<link rel="stylesheet" href="./css/header.css" />
+		<link rel="stylesheet" href="./css/header-marca.css" />
 		<link rel="stylesheet" href="./css/banner.css" />
 		<link rel="stylesheet" href="./css/info.css" />
 		<link rel="stylesheet" href="./css/about.css" />
@@ -61,108 +61,22 @@
 			</nav>
 		</header>
 
-		<section class="carrossel">
-			<!-- Slider main container -->
-			<div class="swiper">
-				<!-- Additional required wrapper -->
-				<div class="swiper-wrapper">
-					<!-- Slides -->
-					<div class="swiper-slide">
-						<div>
-							<img
-								class="slide-marca"
-								src="./img/banner topo 1.png"
-								alt="banner"
-							/>
-						</div>
-						<div class="conteudo">
-							<p class="conteudo-um">CATEGORIA</p>
-							<h2>LOREM IPSUM</h2>
-							<p class="conteudo-dois">
-								Lorem ipsum dolor sit amet, consectetur
-								adipiscing <br />
-								elit. In sed ipsum tempor, fermentum lorem
-								pellentesque, luctus tortor.
-							</p>
-							<a href="#">BOTÃO</a>
-						</div>
-					</div>
-					<div class="swiper-slide">
-						<div>
-							<img
-								class="slide-marca"
-								src="./img/banner topo 1.png"
-								alt="banner"
-							/>
-						</div>
-						<div class="conteudo">
-							<p class="conteudo-um">CATEGORIA</p>
-							<h2>LOREM IPSUM</h2>
-							<p class="conteudo-dois">
-								Lorem ipsum dolor sit amet, consectetur
-								adipiscing elit. In sed ipsum tempor, fermentum
-								lorem pellentesque, luctus tortor.
-							</p>
-							<a href="#">BOTÃO</a>
-						</div>
-					</div>
-					<div class="swiper-slide">
-						<div>
-							<img
-								class="slide-marca"
-								src="./img/banner topo 1.png"
-								alt="banner"
-							/>
-						</div>
-						<div class="conteudo">
-							<p class="conteudo-um">CATEGORIA</p>
-							<h2>LOREM IPSUM</h2>
-							<p class="conteudo-dois">
-								Lorem ipsum dolor sit amet, consectetur
-								adipiscing elit. In sed ipsum tempor, fermentum
-								lorem pellentesque, luctus tortor.
-							</p>
-							<a href="#">BOTÃO</a>
-						</div>
-					</div>
-				</div>
-				<!-- If we need pagination -->
-				<div class="swiper-pagination"></div>
-
-				<!-- If we need navigation buttons -->
-				<div class="swiper-button-prev"></div>
-				<div class="swiper-button-next"></div>
-
-				<!-- If we need scrollbar -->
-				<!-- <div class="swiper-scrollbar"></div> -->
+		<section class="carousel">
+			<i class="fa-solid fa-angle-up carousel-arrow" id="arrow-left"></i>
+			<img alt="banner" src="./img/banner topo 1.png" id="img-banner" />
+			<div class="carousel-text conteudo">
+				<h6>CATEGORIA</h6>
+				<h1>LOREM IPSUM</h1>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
+					sed ipsum tempor, fermentum lorem pellentesque, luctus
+					tortor.
+				</p>
+				<button class="btn-geral">BOTÃO</button>
 			</div>
+			<i class="fa-solid fa-angle-up carousel-arrow" id="arrow-right"></i>
+			<div class="slide-indicators"></div>
 		</section>
-
-		<!-- <section class="carousel">
-				<i
-					class="fa-solid fa-angle-up carousel-arrow"
-					id="arrow-left"
-				></i>
-				<img
-					alt="banner"
-					src="./img/banner topo 1.png"
-					id="img-banner"
-				/>
-				<div class="carousel-text conteudo">
-					<h6>CATEGORIA</h6>
-					<h1>LOREM IPSUM</h1>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-						In sed ipsum tempor, fermentum lorem pellentesque,
-						luctus tortor.
-					</p>
-					<button class="btn-geral">BOTÃO</button>
-				</div>
-				<i
-					class="fa-solid fa-angle-up carousel-arrow"
-					id="arrow-right"
-				></i>
-			</section> -->
 
 		<section id="info--menu">
 			<div class="btn--menu">
