--- a/produto.html
+++ b/produto.html
@@ -137,11 +137,15 @@
 					</table>
 					<hr />
 					<div id="rating">
-						<i class="fa-solid fa-star" id="rating-1"></i>
-						<i class="fa-solid fa-star" id="rating-2"></i>
-						<i class="fa-solid fa-star" id="rating-3"></i>
-						<i class="fa-solid fa-star" id="rating-4"></i>
-						<i class="fa-solid fa-star" id="rating-5"></i>
+						<img
+							src="./img/star-active.png"
+							alt="star 1"
+							id="rating-1"
+						/>
+						<img src="./img/star.png" alt="star 2" id="rating-2" />
+						<img src="./img/star.png" alt="star 3" id="rating-3" />
+						<img src="./img/star.png" alt="star 4" id="rating-4" />
+						<img src="./img/star.png" alt="star 5" id="rating-5" />
 					</div>
 					<h3 id="valorTotal">R$ 00,00</h3>
 					<section id="compra">
@@ -178,11 +182,11 @@
 				<section class="comentario">
 					<h3>Nome Sobrenome</h3>
 					<div class="rating-user">
-						<i class="fa-solid fa-star"></i>
-						<i class="fa-solid fa-star"></i>
-						<i class="fa-solid fa-star"></i>
-						<i class="fa-solid fa-star"></i>
-						<i class="fa-solid fa-star"></i>
+						<img src="./img/star.png" />
+						<img src="./img/star.png" />
+						<img src="./img/star.png" />
+						<img src="./img/star.png" />
+						<img src="./img/star.png" />
 					</div>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -199,11 +203,11 @@
 					</div>
 					<h3>Nome Sobrenome</h3>
 					<div class="rating-user">
-						<i class="fa-solid fa-star"></i>
-						<i class="fa-solid fa-star"></i>
-						<i class="fa-solid fa-star"></i>
-						<i class="fa-solid fa-star"></i>
-						<i class="fa-solid fa-star"></i>
+						<img src="./img/star.png" />
+						<img src="./img/star.png" />
+						<img src="./img/star.png" />
+						<img src="./img/star.png" />
+						<img src="./img/star.png" />
 					</div>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -216,11 +220,11 @@
 					</div>
 					<h3>Nome Sobrenome</h3>
 					<div class="rating-user">
-						<i class="fa-solid fa-star"></i>
-						<i class="fa-solid fa-star"></i>
-						<i class="fa-solid fa-star"></i>
-						<i class="fa-solid fa-star"></i>
-						<i class="fa-solid fa-star"></i>
+						<img src="./img/star.png" />
+						<img src="./img/star.png" />
+						<img src="./img/star.png" />
+						<img src="./img/star.png" />
+						<img src="./img/star.png" />
 					</div>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
