--- a/home-loja.html
+++ b/home-loja.html
@@ -26,6 +26,7 @@
 
 	<body>
 		<header class="cabecalho">
+			<div class="cabecalho__flex">
 			<a class="menu__link" href="./index.html"
 					><img
 						class="logo"
@@ -47,6 +48,7 @@
 					</li>
 				</ul>
 			</div>
+		</div>
 
 			<div class="redes">
 
