--- a/home-loja.html
+++ b/home-loja.html
@@ -27,7 +27,7 @@
 	<body>
 		<header class="cabecalho">
 			<nav class="menu">
-				<a class="menu__link" href="./index.html"
+				<a class="menu__link" href="./home-loja.html"
 					><img
 						class="logo"
 						alt="Logo Goró"
@@ -55,7 +55,9 @@
 								class="redes__logo"
 								alt="Login"
 								src="./img/login.svg"
-						/> LOGIN </a>
+							/>
+							LOGIN
+						</a>
 					</li>
 					<li class="menu__item">
 						<a class="menu__link" href="#"
@@ -63,7 +65,9 @@
 								class="redes__logo"
 								alt="Carrinho"
 								src="./img/carrinho.svg"
-						/> CARRINHO </a>
+							/>
+							CARRINHO
+						</a>
 					</li>
 				</ul>
 			</nav>
