--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
 				<button class="btn-geral">BOTÃO</button>
 			</div>
 			<i class="fa-solid fa-angle-up carousel-arrow" id="arrow-right"></i>
-			<div class="slide-indicators"></div>
+			<div class="slide-indicators">
+				<img src="./img/slide-indicator-active.png" />
+				<img src="./img/slide-indicator.png" />
+				<img src="./img/slide-indicator.png" />
+			</div>
 		</section>
 
 		<section id="info--menu">
