--- a/Login.html
+++ b/Login.html
@@ -97,7 +97,7 @@
 				<button class="form__button">ENTRAR</button>
 				<p>
 					Primeira vez por aqui?
-					<a href="#" class="">Crie uma conta</a>
+					<a href="./cadastro.html" class="">Crie uma conta</a>
 				</p>
 			</form>
 		</section>
