--- a/cadastro.html
+++ b/cadastro.html
@@ -25,7 +25,7 @@
 
 	<body>
 		<header class="cabecalho">
-			<a class="menu__link" href="./index.html"
+			<a class="menu__link" href="./home-loja.html"
 					><img
 						class="logo"
 						alt="Logo Goró"
