--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Goró</title>
-		<link rel="stylesheet" href="./style.css" />
+		<link rel="stylesheet" href="./css/style.css" />
 		<link rel="stylesheet" href="./css/header-marca.css" />
 		<link rel="stylesheet" href="./css/banner.css" />
-		<link rel="stylesheet" href="./css/info.css" />
+		<link rel="stylesheet" href="./css/portifolio.css" />
 		<link rel="stylesheet" href="./css/about.css" />
 		<link rel="stylesheet" href="./css/footer.css" />
 		<script
@@ -198,13 +198,18 @@
 			</section>
 		</main>
 
+		<hr class="amarelo" />
+		<hr class="vermelho" />
+		<hr class="preto" />
+
 		<footer>
-			<hr class="amarelo" />
-			<hr class="vermelho" />
-			<hr class="preto" />
 			<div class="footer__container">
 				<div class="footer__logo">
-					<img class="logo" alt="Logo Goró" src="./img/logo.png" />
+					<img
+						class="logo"
+						alt="Logo Goró"
+						src="./img/logo goro 1.png"
+					/>
 				</div>
 
 				<div class="footer__inst">
@@ -240,8 +245,8 @@
 					</ul>
 
 					<div class="footer__redes">
+						<h5>REDES SOCIAIS</h5>
 						<ul class="footer__lista">
-							<h5>REDES SOCIAIS</h5>
 							<li class="footer__item">
 								<a class="footer__link" href="#"
 									><img
