--- a/produto.html
+++ b/produto.html
@@ -50,28 +50,24 @@
 			<nav class="redes">
 				<ul class="menu__lista">
 					<li class="menu__item">
-						<a class="menu__link" href="#"
+						<a class="menu__link" href="./Login.html"
 							><img
 								class="redes__logo"
-								alt="Instagram"
-								src="./img/Instagram.png"
-						/></a>
+								alt="Login"
+								src="./img/login.svg"
+							/>
+							LOGIN
+						</a>
 					</li>
 					<li class="menu__item">
 						<a class="menu__link" href="#"
 							><img
 								class="redes__logo"
-								alt="YouTube"
-								src="./img/YouTube.png"
-						/></a>
-					</li>
-					<li class="menu__item">
-						<a class="menu__link" href="#"
-							><img
-								class="redes__logo"
-								alt="Facebook"
-								src="./img/Facebook.png"
-						/></a>
+								alt="Carrinho"
+								src="./img/carrinho.svg"
+							/>
+							CARRINHO
+						</a>
 					</li>
 				</ul>
 			</nav>
@@ -349,13 +345,18 @@
 				</ul>
 			</section>
 		</main>
+		<hr class="amarelo" />
+		<hr class="vermelho" />
+		<hr class="preto" />
+
 		<footer>
-			<hr class="amarelo" />
-			<hr class="vermelho" />
-			<hr class="preto" />
 			<div class="footer__container">
 				<div class="footer__logo">
-					<img class="logo" alt="Logo Goró" src="./img/logo.png" />
+					<img
+						class="logo"
+						alt="Logo Goró"
+						src="./img/logo goro 1.png"
+					/>
 				</div>
 
 				<div class="footer__inst">
@@ -391,8 +392,8 @@
 					</ul>
 
 					<div class="footer__redes">
+						<h5>REDES SOCIAIS</h5>
 						<ul class="footer__lista">
-							<h5>REDES SOCIAIS</h5>
 							<li class="footer__item">
 								<a class="footer__link" href="#"
 									><img
