--- a/home-loja.html
+++ b/home-loja.html
@@ -28,15 +28,12 @@
 		<header class="cabecalho">
 			<nav class="menu">
 				<a class="menu__link" href="./home-loja.html"
-
 					><img
 						class="logo"
 						alt="Logo Goró"
 						src="./img/logo goro 1.png"
 					/>
-			</a>
-			<div class="menu">
-				
+				</a>
 				<ul class="menu__lista">
 					<li class="menu__item">
 						<a class="menu__linka" href="#">CERVEJAS</a>
@@ -48,40 +45,32 @@
 						<a class="menu__linka" href="#">KITS</a>
 					</li>
 				</ul>
-			</div>
-		</div>
+			</nav>
 
-
-			<div class="redes">
-
-				<div class="nav_menu">
-					<ul class="menu__lista">
-						<li class="menu__item">
-							<a class="menu__link" href="./Login.html"
-								><img
-									class="redes__logo"
-									alt="Login"
-									src="./img/login.svg"
-							/> LOGIN </a>
-						</li>
-						<li class="menu__item">
-							<a class="menu__link" href="#"
-								><img
-									class="redes__logo"
-									alt="Carrinho"
-									src="./img/carrinho.svg"
-							/> CARRINHO </a>
-						</li>
-					</ul>
-				</div>
-
-				<div class="menu-bar">
-					<span class="bar"></span>
-					<span class="bar"></span>
-					<span class="bar"></span>
-				</div>
-				
-			</div>
+			<nav class="redes">
+				<ul class="menu__lista">
+					<li class="menu__item">
+						<a class="menu__link" href="./Login.html"
+							><img
+								class="redes__logo"
+								alt="Login"
+								src="./img/login.svg"
+							/>
+							LOGIN
+						</a>
+					</li>
+					<li class="menu__item">
+						<a class="menu__link" href="#"
+							><img
+								class="redes__logo"
+								alt="Carrinho"
+								src="./img/carrinho.svg"
+							/>
+							CARRINHO
+						</a>
+					</li>
+				</ul>
+			</nav>
 		</header>
 
 		<section class="pesquisa">
@@ -108,8 +97,8 @@
 							<p class="conteudo-um">ACESSÓRIOS</p>
 							<h2>GORÓ STYLE</h2>
 							<p class="conteudo-dois">
-								Chique e confortável! <br>Garanta a camiseta que
-								<br />combina com a sua cerveja <br> favorita.
+								Chique e confortável! Garanta a camiseta que
+								<br />combina com a sua cerveja favorita.
 							</p>
 							<a href="#">VER CAMISETAS</a>
 						</div>
@@ -158,7 +147,10 @@
 		<section class="categoria">
 			<h3>CATEGORIAS</h3>
 			<div class="categoria__container">
-				<a href="#" class="categoria__amarelo">
+				<a
+					href="./Lista-de-Produtos---Cerveja-master/index.html"
+					class="categoria__amarelo"
+				>
 					<img src="./img/Group 4.svg" />
 					<h4>CERVEJA</h4>
 				</a>
@@ -440,7 +432,7 @@
 
 		<footer>
 			<div class="footer__container">
-				<div class=".footer__logo">
+				<div class="footer__logo">
 					<img
 						class="logo"
 						alt="Logo Goró"
