--- a/cadastro.html
+++ b/cadastro.html
@@ -60,7 +60,7 @@
 							/> LOGIN </a>
 						</li>
 						<li class="menu__item">
-							<a class="menu__link" href="#"
+							<a class="menu__link" href="./carrinho de compras.html"
 								><img
 									class="redes__logo"
 									alt="Carrinho"
