--- a/carrinho de compras.html
+++ b/carrinho de compras.html
@@ -44,7 +44,7 @@
 
 					<li>
 					<img class="carrinho" alt="carrinho" src="./img/carrinho.svg">
-					<a class="carrinho" href="#">CARRINHO</a>
+					<a class="carrinho" href="./carrinho de compras.html">CARRINHO</a>
 					</li>
 					
 				</ul>
