--- a/Login.html
+++ b/Login.html
@@ -61,7 +61,7 @@
 						</a>
 					</li>
 					<li class="menu__item">
-						<a class="menu__link" href="#"
+						<a class="menu__link" href="./carrinho de compras.html"
 							><img
 								class="redes__logo"
 								alt="Carrinho"
