--- a/carrinho de compras.html
+++ b/carrinho de compras.html
@@ -7,7 +7,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lato:wght@400;900&display=swap" rel="stylesheet"/>
-	<link href="./css/stylesheet.css" rel="stylesheet" />
+	<link href="./css/pagina_de_carrinho.css" rel="stylesheet" />
 	<link rel="stylesheet" href="./css/reset.css"/>
 	<link rel="stylesheet" href="./css/header.css"/>
 	<link rel="stylesheet" href="./css/footer.css"/>
@@ -259,7 +259,7 @@
 									><img
 										class="redes__logo"
 										alt="Facebook"
-										src="/img/Facebook - Negative.svg"
+										src="./img/Facebook - Negative.svg"
 								/></a>
 							</li>
 						</ul>
