Adicionei o link de acessórios e kits no Menu

--- a/carrinho de compras.html
+++ b/carrinho de compras.html
@@ -28,10 +28,10 @@
 				<a class="menu__linka" href="#">CERVEJAS</a>
 				</li>
 				<li class="menu__item">
-				<a class="menu__linka" href="#">ACESSÓRIOS</a>
+				<a class="menu__linka" href="./Lista - Acessórios/index.html">ACESSÓRIOS</a>
 				</li>
 				<li class="menu__item">
-				<a class="menu__linka" href="#">KITS</a>
+				<a class="menu__linka" href="./Lista - Kits/index.html">KITS</a>
 				</li>
 		</ul>
 	</div>
