--- a/home-loja.html
+++ b/home-loja.html
@@ -39,10 +39,10 @@
 						<a class="menu__linka" href="#">CERVEJAS</a>
 					</li>
 					<li class="menu__item">
-						<a class="menu__linka" href="#">ACESSÓRIOS</a>
+						<a class="menu__linka" href="./Lista - Acessórios/index.html">ACESSÓRIOS</a>
 					</li>
 					<li class="menu__item">
-						<a class="menu__linka" href="#">KITS</a>
+						<a class="menu__linka" href="./Lista - Kits/index.html">KITS</a>
 					</li>
 				</ul>
 			</nav>
@@ -154,11 +154,11 @@
 					<img src="./img/Group 4.svg" />
 					<h4>CERVEJA</h4>
 				</a>
-				<a href="#" class="categoria__preto">
+				<a href="./Lista - Acessórios/index.html" class="categoria__preto">
 					<img src="./img/Vector.svg" />
 					<h4>ACESSÓRIOS</h4>
 				</a>
-				<a href="#" class="categoria__vermelho">
+				<a href="./Lista - Kits/index.html" class="categoria__vermelho">
 					<img src="./img/Vector_.svg" />
 					<h4>KITS</h4>
 				</a>
