--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Goró</title>
-		<link rel="stylesheet" href="./css/style.css" />
-		<link rel="stylesheet" href="./css/banner.css" />
-		<link rel="stylesheet" href="./css/header-marca.css" />
-		<link rel="stylesheet" href="./css/portifolio.css" />
-		<link rel="stylesheet" href="./css/about.css" />
-		<link rel="stylesheet" href="./css/footer.css" />
+		<link rel="stylesheet" href="./css/index.css" />
 		<script
 			src="https://kit.fontawesome.com/8efdacdf0c.js"
 			crossorigin="anonymous"
