--- a/produto.html
+++ b/produto.html
@@ -27,7 +27,7 @@
 	<body>
 		<header class="cabecalho">
 			<nav class="menu">
-				<a class="menu__link" href="./home-loja.html"
+				<a class="menu__link" href="./index.html"
 					><img
 						class="logo"
 						alt="Logo Goró"
