--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							class="nav--link"
 							href="./home-loja.html"
 							target="_blank"
-							>LOJA</a
+							>banana</a
 						>
 					</li>
 				</ul>
