--- a/index.html
+++ b/index.html
@@ -250,19 +250,19 @@
 					<ul>
 						<h5>INSTITUCIONAL</h5>
 						<li>
-							<a href="#"> Home </a>
+							<a href="./index.html"> Home </a>
 						</li>
 						<li>
-							<a href="#"> Portfólio </a>
+							<a href="#info--menu"> Portfólio </a>
 						</li>
 						<li>
 							<a href="#"> Contato </a>
 						</li>
 						<li>
-							<a href="#"> Sobre nós </a>
+							<a href="#about"> Sobre nós </a>
 						</li>
 						<li>
-							<a href="#"> loja </a>
+							<a href="./home-loja.html"> loja </a>
 						</li>
 					</ul>
 				</div>
