adicionado links nos footers

--- a/produto.html
+++ b/produto.html
@@ -34,10 +34,16 @@
 						<a class="menu__linka" href="#">CERVEJAS</a>
 					</li>
 					<li class="menu__item">
-						<a class="menu__linka" href="./Lista - Acessórios/index.html">ACESSÓRIOS</a>
+						<a
+							class="menu__linka"
+							href="./Lista - Acessórios/index.html"
+							>ACESSÓRIOS</a
+						>
 					</li>
 					<li class="menu__item">
-						<a class="menu__linka" href="./Lista - Kits/index.html">KITS</a>
+						<a class="menu__linka" href="./Lista - Kits/index.html"
+							>KITS</a
+						>
 					</li>
 				</ul>
 			</nav>
@@ -358,19 +364,19 @@
 					<ul>
 						<h5>INSTITUCIONAL</h5>
 						<li>
-							<a href="#"> Home </a>
+							<a href="./index.html"> Home </a>
 						</li>
 						<li>
-							<a href="#"> Portfólio </a>
+							<a href="./index.html#info--menu"> Portfólio </a>
 						</li>
 						<li>
 							<a href="#"> Contato </a>
 						</li>
 						<li>
-							<a href="#"> Sobre nós </a>
+							<a href="./index.html#about"> Sobre nós </a>
 						</li>
 						<li>
-							<a href="#"> loja </a>
+							<a href="./home-loja.html"> loja </a>
 						</li>
 					</ul>
 				</div>
