--- a/Login.html
+++ b/Login.html
@@ -40,10 +40,16 @@
 						<a class="menu__linka" href="#">CERVEJAS</a>
 					</li>
 					<li class="menu__item">
-						<a class="menu__linka" href="./Lista - Acessórios/index.html">ACESSÓRIOS</a>
+						<a
+							class="menu__linka"
+							href="./Lista - Acessórios/index.html"
+							>ACESSÓRIOS</a
+						>
 					</li>
 					<li class="menu__item">
-						<a class="menu__linka" href="./Lista - Kits/index.html">KITS</a>
+						<a class="menu__linka" href="./Lista - Kits/index.html"
+							>KITS</a
+						>
 					</li>
 				</ul>
 			</nav>
@@ -113,24 +119,22 @@
 				</div>
 
 				<div class="footer__inst">
-					<ul>
-						<h5>INSTITUCIONAL</h5>
-						<li>
-							<a href="#"> Home </a>
-						</li>
-						<li>
-							<a href="#"> Portfólio </a>
-						</li>
-						<li>
-							<a href="#"> Contato </a>
-						</li>
-						<li>
-							<a href="#"> Sobre nós </a>
-						</li>
-						<li>
-							<a href="#"> loja </a>
-						</li>
-					</ul>
+					<h5>INSTITUCIONAL</h5>
+					<li>
+						<a href="./index.html"> Home </a>
+					</li>
+					<li>
+						<a href="./index.html#info--menu"> Portfólio </a>
+					</li>
+					<li>
+						<a href="#"> Contato </a>
+					</li>
+					<li>
+						<a href="./index.html#about"> Sobre nós </a>
+					</li>
+					<li>
+						<a href="./home-loja.html"> loja </a>
+					</li>
 				</div>
 
 				<div class="footer__legal">
