--- a/cadastro.html
+++ b/cadastro.html
@@ -256,19 +256,19 @@
 					<ul>
 						<h5>INSTITUCIONAL</h5>
 						<li>
-							<a href="#"> Home </a>
+							<a href="./index.html"> Home </a>
 						</li>
 						<li>
-							<a href="#"> Portfólio </a>
+							<a href="./index.html#info--menu"> Portfólio </a>
 						</li>
 						<li>
 							<a href="#"> Contato </a>
 						</li>
 						<li>
-							<a href="#"> Sobre nós </a>
+							<a href="./index.html#about"> Sobre nós </a>
 						</li>
 						<li>
-							<a href="#"> loja </a>
+							<a href="./home-loja.html"> loja </a>
 						</li>
 					</ul>
 				</div>
