--- a/home-loja.html
+++ b/home-loja.html
@@ -39,10 +39,16 @@
 						<a class="menu__linka" href="#">CERVEJAS</a>
 					</li>
 					<li class="menu__item">
-						<a class="menu__linka" href="./Lista - Acessórios/index.html">ACESSÓRIOS</a>
+						<a
+							class="menu__linka"
+							href="./Lista - Acessórios/index.html"
+							>ACESSÓRIOS</a
+						>
 					</li>
 					<li class="menu__item">
-						<a class="menu__linka" href="./Lista - Kits/index.html">KITS</a>
+						<a class="menu__linka" href="./Lista - Kits/index.html"
+							>KITS</a
+						>
 					</li>
 				</ul>
 			</nav>
@@ -154,7 +160,10 @@
 					<img src="./img/Group 4.svg" />
 					<h4>CERVEJA</h4>
 				</a>
-				<a href="./Lista - Acessórios/index.html" class="categoria__preto">
+				<a
+					href="./Lista - Acessórios/index.html"
+					class="categoria__preto"
+				>
 					<img src="./img/Vector.svg" />
 					<h4>ACESSÓRIOS</h4>
 				</a>
@@ -444,19 +453,19 @@
 					<ul>
 						<h5>INSTITUCIONAL</h5>
 						<li>
-							<a href="#"> Home </a>
+							<a href="./index.html"> Home </a>
 						</li>
 						<li>
-							<a href="#"> Portfólio </a>
+							<a href="./index.html#info--menu"> Portfólio </a>
 						</li>
 						<li>
 							<a href="#"> Contato </a>
 						</li>
 						<li>
-							<a href="#"> Sobre nós </a>
+							<a href="./index.html#about"> Sobre nós </a>
 						</li>
 						<li>
-							<a href="#"> loja </a>
+							<a href="./home-loja.html"> loja </a>
 						</li>
 					</ul>
 				</div>
